--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-//hello
 name: Test, Build, and Deploy | Modul 01 - Lab2.2 Senior Project
 
 on:
@@ -66,3 +65,5 @@ jobs:
               npm install;
               npm run build;
             }
+
+#hello
