--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: Test, Build, and Deploy | Modul 01 - Lab2.2 Senior Project
+#name: Test, Build, and Deploy | Modul 01 - Lab2.2 Senior Project
 
-on:
-  push:
-    branches:
+#on:
+#  push:
+#    branches:
       - main
 
 jobs:
